[project]
name = "comfyui-togethervision"
description = "A custom ComfyUI node for generating AI-powered image descriptions using Together AI's Vision models (both free and paid versions). Features include customizable prompts, advanced generation parameters, and robust image handling with comprehensive error management."
version = "1.0.0"
license = {file = "LICENSE"}
dependencies = ["together", "python-dotenv"]

[project.urls]
Repository = "https://github.com/mithamunda/ComfyUI-TogetherVision"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI-TogetherVision"
Icon = ""
